--- a/app/views/factory/productions/index.html+phone.erb
+++ b/app/views/factory/productions/index.html+phone.erb
@@ -12,11 +12,12 @@
   <div data-controller="page" data-page-debug-value="true" data-action="touchmove->page#move:passive" class="weui-panel is-borderless weui-panel_access mt-0 weui-flex__item" style="height: 100%">
     <div class="weui-panel__bd">
       <%= render partial: 'production', collection: @productions, as: :model %>
-      <%= render 'loading' %>
       <% if @productions.total_pages == @productions.current_page %>
         <%= render 'no_more' %>
       <% elsif @productions.blank? %>
         <%= render 'blank' %>
+      <% elsif @productions.total_pages > @productions.current_page %>
+        <%= render 'loading' %>
       <% else %>
         <%= render 'tip' %>
       <% end %>
