auto udpate gola value

--- a/app/views/factory/admin/product_part_taxons/_new_form.html.erb
+++ b/app/views/factory/admin/product_part_taxons/_new_form.html.erb
@@ -1,6 +1,7 @@
-<%= form_with model: @product_part_taxon, url: { action: 'create' } do |f| %>
+<%= form_with model: @product_part_taxon, url: { action: 'create' }, data: { controller: 'equal' } do |f| %>
   <%= render 'error_messages', target: f.object %>
   <%= f.collection_select :part_taxon_id, @part_taxons, :id, :name %>
-  <%= f.number_field :min_select, step: 1 %>
+  <%= f.number_field :min_select, step: 1, data: { action: 'equal#update' } %>
+  <%= f.number_field :max_select, step: 1, data: { equal_target: 'goal' } %>
   <%= f.submit %>
 <% end %>
