--- a/app/views/factory/admin/product_part_taxons/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/product_part_taxons/_index/_index_tbody.html.erb
@@ -4,6 +4,7 @@
   <p><%= model.max_select %></p>
 </td>
 <td><%= model.select_str %></td>
+<td><%= model.product_parts_count %></td>
 <td>
   <%= render partial: 'part_form', locals: { product_part_taxon: model } %>
 </td>
