--- a/app/views/factory/admin/product_part_taxons/_index/_index_thead.html.erb
+++ b/app/views/factory/admin/product_part_taxons/_index/_index_thead.html.erb
@@ -3,5 +3,6 @@
   <p><%= Factory::ProductPartTaxon.human_attribute_name(:min_select) %></p>
   <p><%= Factory::ProductPartTaxon.human_attribute_name(:max_select) %></p>
 </th>
-<th><%= Factory::ProductPartTaxon.human_attribute_name(:max_select) %></th>
+<th><%= Factory::ProductPartTaxon.human_attribute_name(:select_str) %></th>
+<th><%= Factory::ProductPartTaxon.human_attribute_name(:product_parts_count) %></th>
 <th style="width: 30%"></th>
