--- a/app/views/factory/productions/_dialog/_tab_bar.html.erb
+++ b/app/views/factory/productions/_dialog/_tab_bar.html.erb
@@ -1,6 +1,6 @@
 <div class="columns is-mobile has-border-top is-safe-bottom m-0" style="z-index: 500">
   <div class="column is-half is-flex is-justify-content-center is-align-items-center">
-    <%= render partial: 'cart', locals: { model: @production } if current_cart %>
+    <%= render partial: 'factory/productions/_dialog/cart', locals: { model: @production } if current_cart %>
   </div>
   <div class="column is-half">
     <%= link_to({ controller: 'trade/my/carts', action: 'show' }, class: 'button is-danger') do %>
