--- a/app/views/factory/productions/_dialog.html.erb
+++ b/app/views/factory/productions/_dialog.html.erb
@@ -6,8 +6,8 @@
     </button>
   </div>
 </div>
-<div class="weui-half-screen-dialog__bd">
-  <%= form_with model: @production, url: { controller: '/factory/productions', action: 'create' }, method: :post, id: 'edit_custom' do |f| %>
+<div class="weui-half-screen-dialog__bd" id="production_dialog" data-controller="scroll">
+  <%= form_with model: @production, url: { controller: '/factory/productions', action: 'create' }, method: :post, data: { turbo_scroll: true, turbo_scroll_item: 'production_dialog' }, id: 'edit_custom' do |f| %>
     <%= f.hidden_field :product_id %>
   <% end %>
   <%= render 'figure' if @production.product.covers.length > 0 %>
