--- a/app/views/factory/productions/_dialog.html.erb
+++ b/app/views/factory/productions/_dialog.html.erb
@@ -18,5 +18,5 @@
   <%= render partial: 'product_part_taxon', collection: @production.product.product_part_taxons, as: :product_part_taxon %>
 </div>
 <div class="weui-half-screen-dialog__ft">
-  <%= render 'tab_bar' %>
+  <%= render 'factory/productions/_dialog/tab_bar' %>
 </div>
