--- a/app/views/factory/productions/_dialog.html.erb
+++ b/app/views/factory/productions/_dialog.html.erb
@@ -10,12 +10,12 @@
   <%= form_with model: @production, url: { controller: '/factory/productions', action: 'create' }, method: :post, data: { turbo_scroll: true, turbo_scroll_container: 'production_dialog' }, id: 'edit_custom' do |f| %>
     <%= f.hidden_field :product_id %>
   <% end %>
-  <%= render 'figure' if @production.product.covers.length > 0 %>
+  <%= render 'factory/productions/_base/figure' if @production.product.covers.length > 0 %>
   <div class="box is-shadowless has-background-transparent has-text-bold mb-0">
     <span><%= @production.product.name %></span>
     <span class="has-text-danger"><%= @production.price.to_money.format(html_wrap: true).html_safe %></span>
   </div>
-  <%= render partial: 'product_part_taxon', collection: @production.product.product_part_taxons, as: :product_part_taxon %>
+  <%= render partial: 'factory/productions/_base/product_part_taxon', collection: @production.product.product_part_taxons, as: :product_part_taxon %>
 </div>
 <div class="weui-half-screen-dialog__ft">
   <%= render 'factory/productions/_dialog/tab_bar' %>
