support weui-dalog wrap

--- a/app/views/factory/base/_taxon.html.erb
+++ b/app/views/factory/base/_taxon.html.erb
@@ -1,6 +1,6 @@
-<div data-controller="weui-dialog" id="dialog_produce_on" style="display: none; opacity: 0">
+<div data-controller="weui-dialog" id="dialog_produce_on" class="weui-dialog__wrap">
   <%= render 'dialog_produce_on' %>
 </div>
-<div data-controller="weui-dialog" id="dialog_scene" style="display: none; opacity: 0">
+<div data-controller="weui-dialog" id="dialog_scene" class="weui-dialog__wrap">
   <%= render 'dialog_scene' %>
 </div>
