--- a/app/views/factory/buy/carts/_base/_scene.html.erb
+++ b/app/views/factory/buy/carts/_base/_scene.html.erb
@@ -1,6 +1,6 @@
 <div class="weui-media-box weui-media-box_appmsg">
   <div class="weui-media-box__bd">
-    <div class="is-several is-justify-content-center">
+    <div class="is-flex is-justify-content-center">
       <%= image_tag scene.logo, class: 'image is-32x32' if scene.logo.attached? %>
       <span><%= scene.title %></span>
     </div>
