--- a/app/views/factory/buy/carts/_base/_scene.html.erb
+++ b/app/views/factory/buy/carts/_base/_scene.html.erb
@@ -6,8 +6,10 @@
     </div>
     <p class="is-size-7 has-text-centered">
       <span>预定截止：</span>
-      <span><%= extra_distance_date(produce_on) %></span>
-      <time><%= scene.book_finish_at.to_fs(:time) %></time>
+      <span class="<%= scene.bookable?(produce_on) ? 'has-text-success' : 'has-text-danger' %>">
+        <span><%= extra_distance_date(produce_on) %></span>
+        <time><%= scene.book_finish_at.to_fs(:time) %></time>
+      </span>
     </p>
     <p class="is-size-7 has-text-centered">
       <span>配送时间：</span>
@@ -17,7 +19,7 @@
     </p>
   </div>
   <div class="weui-media-box__ft pr-2">
-    <%= button_to({ action: 'actions', scene_id: scene.id, produce_on: produce_on }, class: 'weui-btn weui-btn_primary') do %>
+    <%= button_to({ action: 'actions', scene_id: scene.id, produce_on: produce_on }, class: 'weui-btn weui-btn_primary', disabled: !scene.bookable?(produce_on)) do %>
       <span>点餐</span>
     <% end %>
   </div>
