--- a/app/views/factory/admin/products/_index/_index_thead.html.erb
+++ b/app/views/factory/admin/products/_index/_index_thead.html.erb
@@ -16,4 +16,5 @@
   <p><%= Factory::Product.human_attribute_name(:min_price) %></p>
   <p><%= Factory::Product.human_attribute_name(:max_price) %></p>
 </th>
+<th><%= Factory::Product.human_attribute_name(:specialty) %></th>
 <th></th>
