--- a/app/views/factory/base/_filter_table.html.erb
+++ b/app/views/factory/base/_filter_table.html.erb
@@ -7,21 +7,21 @@
           <span class="has-text-info">前一天</span>
           <span class="has-text-grey is-size-7 pl-1 is-flex is-flex-direction-column is-align-items-center">
             <span><%= @produce_plan.produce_on - 1 %></span>
-            <span><%= (@produce_plan.produce_on - 1).to_s(:week) %></span>
+            <span><%= (@produce_plan.produce_on - 1).to_fs(:week) %></span>
           </span>
           <i class="fa-solid fa-chevron-left has-text-info pl-1"></i>
         <% end %>
       <% end %>
       <div class="button is-primary">
         <span><%= @produce_plan.produce_on %></span>
-        <span><%= @produce_plan.produce_on.to_s(:week) %></span>
+        <span><%= @produce_plan.produce_on.to_fs(:week) %></span>
       </div>
       <% if @produce_plan.next_plan %>
         <%= link_to({ produce_plan_id: @produce_plan.next_plan.id, organ_id: params[:organ_id] }, class: 'button is-primary') do %>
           <span class="has-text-info">后一天</span>
           <span class="has-text-grey is-size-7 pl-1 is-flex is-flex-direction-column is-align-items-center">
             <span><%= @produce_plan.produce_on + 1 %></span>
-            <span><%= (@produce_plan.produce_on + 1).to_s(:week) %></span>
+            <span><%= (@produce_plan.produce_on + 1).to_fs(:week) %></span>
           </span>
           <i class="fa-solid fa-chevron-right has-text-info pl-1"></i>
         <% end %>
