--- a/app/views/factory/buy/produce_plans/index.html+phone.erb
+++ b/app/views/factory/buy/produce_plans/index.html+phone.erb
@@ -3,7 +3,7 @@
   <div class="weui-panel__hd">
     <span><%= extra_distance_date(produce_on) %></span>
     <span class="has-text-weight-normal has-text-grey is-size-7"><%= produce_on %></span>
-    <span class="has-text-weight-normal has-text-grey is-size-7"><%= produce_on.to_s(:week) %></span>
+    <span class="has-text-weight-normal has-text-grey is-size-7"><%= produce_on.to_fs(:week) %></span>
   </div>
   <div class="weui-panel__bd">
     <div class="columns is-multiline is-flex m-0 p-4">
