--- a/app/views/factory/admin/productions/_vip_form.html.erb
+++ b/app/views/factory/admin/productions/_vip_form.html.erb
@@ -2,11 +2,8 @@
   <%= render 'error_messages', target: @production %>
   <% @card_templates.each do |card_template| %>
     <%= f.fields :vip_price do |ef| %>
-      <label><%= card_template.name %></label>
-      <div class="field-body">
-        <%= ef.hidden_field :code, value: card_template.code, index: card_template.id %>
-        <%= ef.number_field :price, step: 0.01, value: @production.vip_price.fetch(card_template.code, @production.price), index: card_template.id %>
-      </div>
+      <%= ef.hidden_field :code, value: card_template.code, index: card_template.id %>
+      <%= ef.number_field :price, step: 0.01, value: @production.vip_price.fetch(card_template.code, @production.price), label: card_template.name, index: card_template.id %>
     <% end %>
   <% end %>
   <%= f.submit %>
