--- a/app/views/factory/productions/index.html+phone.erb
+++ b/app/views/factory/productions/index.html+phone.erb
@@ -7,7 +7,7 @@
   <span><%= current_organ.address_detail %></span>
 </div>
 
-<div class="weui-flex is-align-items-flex-start is-flex-grow-1">
+<div class="weui-flex is-align-items-flex-start is-flex-grow-1" style="margin-bottom: -1rem">
   <%= render 'menu' unless @produce_plan %>
   <div data-controller="page" data-page-debug-value="true" data-action="touchmove->page#move:passive" class="weui-panel is-borderless weui-panel_access mt-0 weui-flex__item" style="height: 100%">
     <div class="weui-panel__bd">
