has background lgiht

--- a/app/views/factory/productions/_index/_tab_bar.html.erb
+++ b/app/views/factory/productions/_index/_tab_bar.html.erb
@@ -1,4 +1,4 @@
-<div>
+<div class="has-background-light">
   <%= render 'tab_bar_cart' if current_cart %>
   <div class="weui-tabbar">
     <%= render 'tab_bar_item' %>
