--- a/app/views/factory/productions/show.html+phone.erb
+++ b/app/views/factory/productions/show.html+phone.erb
@@ -1,3 +1,5 @@
+<%= render 'breadcrumb' %>
+
 <%= form_with model: @production, url: { controller: '/factory/productions', action: 'create' }, method: :post, id: 'edit_custom' do |f| %>
   <%= f.hidden_field :product_id %>
   <%= f.hidden_field :product_plan_id, value: params[:product_plan_id] %>
