--- a/app/views/factory/productions/_dialog.html.erb
+++ b/app/views/factory/productions/_dialog.html.erb
@@ -1,5 +1,6 @@
 <div class="weui-half-screen-dialog__hd">
-  <div class="weui-half-screen-dialog__hd__main"></div>
+  <div class="weui-half-screen-dialog__hd__side"></div>
+  <div class="weui-half-screen-dialog__hd__main"><%= @production.name %></div>
   <div class="weui-half-screen-dialog__hd__side">
     <button class="weui-btn_icon" data-action="weui-dialog#close">
       <i class="weui-icon-close-thin"></i>
