--- a/app/views/factory/productions/_dialog/_cart.html.erb
+++ b/app/views/factory/productions/_dialog/_cart.html.erb
@@ -14,8 +14,9 @@
   <%= f.hidden_field :good_id, value: model.id %>
   <%= f.hidden_field :produce_on, value: params[:produce_on] %>
   <%= f.hidden_field :scene_id, value: params[:scene_id] %>
-  <%= button_tag do %>
+  <%= button_tag class: 'weui-btn weui-btn_mini weui-btn_danger' do %>
     <i class="fa-solid fa-circle-plus fa-xl has-text-grey"></i>
+    <span>加入购物车</span>
   <% end %>
 <% end unless trade_item %>
 <%= button_to({ controller: 'factory/my/trade_items', action: 'update', id: trade_item.id }, method: :patch, params: { '[trade_item]number': trade_item.number + 1 }, class: 'ml-1', form: { data: { turbo_scroll: true, turbo_scroll_container: 'production_dialog' } }) do %>
