--- a/app/views/factory/productions/_dialog/_cart.html.erb
+++ b/app/views/factory/productions/_dialog/_cart.html.erb
@@ -15,7 +15,7 @@
   <%= f.hidden_field :produce_on, value: params[:produce_on] %>
   <%= f.hidden_field :scene_id, value: params[:scene_id] %>
   <%= button_tag class: 'weui-btn weui-btn_mini weui-btn_danger' do %>
-    <i class="fa-solid fa-circle-plus fa-xl has-text-grey"></i>
+    <i class="fa-solid fa-circle-plus"></i>
     <span>加入购物车</span>
   <% end %>
 <% end unless trade_item %>
