--- a/app/views/factory/productions/_dialog/_cart.html.erb
+++ b/app/views/factory/productions/_dialog/_cart.html.erb
@@ -1,9 +1,9 @@
 <% trade_item = current_cart.trade_items.find(&->(i){ i.good_type == model.class_name && i.good_id == model.id && i.produce_on.to_s == params[:produce_on].to_s && i.scene_id.to_s == params[:scene_id].to_s }) %>
 <%= button_to({ controller: 'factory/my/trade_items', action: 'update', id: trade_item.id }, method: :patch, params: { '[trade_item]number': trade_item.number - 1 }, class: 'mr-1', form: { data: { turbo_scroll: true, turbo_scroll_container: 'production_dialog' } }) do %>
-  <i class="fa-solid fa-circle-minus fa-xl has-text-grey"></i>
+  <i class="fa-solid fa-circle-minus fa-xl has-text-dark-grey"></i>
 <% end if trade_item && trade_item.number > 1 %>
 <%= button_to({ controller: 'factory/my/trade_items', action: 'destroy', id: trade_item.id }, method: :delete, class: 'mr-1', form: { data: { turbo_scroll: true, turbo_scroll_container: 'production_dialog' } }) do %>
-  <i class="fa-solid fa-circle-minus fa-xl has-text-grey"></i>
+  <i class="fa-solid fa-circle-minus fa-xl has-text-dark-grey"></i>
 <% end if trade_item && trade_item.number <= 1 %>
 <%= form_with(theme: nil, scope: 'trade_item', url: { controller: 'factory/my/trade_items', action: 'update', id: trade_item.id }, method: :patch, data: { controller: 'input', turbo_scroll: true, turbo_scroll_container: 'production_dialog' }) do |f| %>
   <%= f.number_field :number, value: trade_item.number, data: { action: 'change->input#form' }, class: 'has-background-light has-text-centered', style: 'width: 30px' %>
@@ -14,7 +14,7 @@
   <%= f.hidden_field :good_id, value: model.id %>
   <%= f.hidden_field :produce_on, value: params[:produce_on] %>
   <%= f.hidden_field :scene_id, value: params[:scene_id] %>
-  <%= button_tag class: 'weui-btn weui-btn_mini weui-btn_danger' do %>
+  <%= button_tag class: 'weui-btn weui-btn_mini weui-btn_danger has-text-white' do %>
     <i class="fa-solid fa-circle-plus"></i>
     <span>加入购物车</span>
   <% end %>
