factory brand curd

--- a/app/views/factory/panel/brands/_form.html.erb
+++ b/app/views/factory/panel/brands/_form.html.erb
@@ -1,4 +1,2 @@
 <%= f.text_field :name %>
-<%= f.text_field :parts_count %>
-<%= f.text_field :products_count %>
-<%= f.text_field :organ_id %>
+<%= f.file_field :logo %>
