--- a/app/views/factory/panel/brands/_index/_index_tbody.html.erb
+++ b/app/views/factory/panel/brands/_index/_index_tbody.html.erb
@@ -1,4 +1,9 @@
-<td><%= model.name %></td>
+<td>
+  <div class="is-several">
+    <%= image_tag model.logo, class: 'image is-24x24' if model.logo.attached? %>
+    <span><%= model.name %></span>
+  </div>
+</td>
 <td><%= model.parts_count %></td>
 <td><%= model.products_count %></td>
 <td><%= model.organ_id %></td>
