--- a/app/views/panel/_factory_nav.html.erb
+++ b/app/views/panel/_factory_nav.html.erb
@@ -1,6 +1,7 @@
 <div class="<%= active_helper(modules: 'factory/panel', active: 'menu ex-accordion is-active', item: 'menu ex-accordion') %>" data-controller="menu">
   <%= content_tag :div, class: 'menu-list' do %>
     <%= link_to t('factory.panel.factory_taxons.index.title'), { controller: 'factory/panel/factory_taxons' }, class: active_helper(controllers: ['factory_taxons'], active: 'is-active') %>
+    <%= link_to t('factory.panel.brands.index.title'), { controller: 'factory/panel/brands' }, class: active_helper(controllers: ['brands'], active: 'is-active') %>
     <%= link_to t('factory.panel.scenes.index.title'), { controller: 'factory/panel/scenes' }, class: active_helper(controllers: ['scenes'], active: 'is-active') -%>
   <% end %>
   <a class="menu-label" data-action="menu#toggle">
