--- a/app/views/admin/_factory_nav.html.erb
+++ b/app/views/admin/_factory_nav.html.erb
@@ -4,6 +4,7 @@
     <%= link_to t('factory.admin.parts.index.title'), { controller: 'factory/admin/parts' }, class: active_helper(controllers: ['parts', 'part_taxons', 'part_plans', 'part_items'], active: 'is-active') %>
     <%= link_to t('factory.admin.scenes.index.title'), { controller: 'factory/admin/scenes' }, class: active_helper(controllers: ['scenes', 'produce_plans'], active: 'is-active') %>
     <%= link_to t('factory.admin.produce_on.index.title'), { controller: 'factory/admin/produce_on' }, class: active_helper(controllers: 'produce_on', active: 'is-active') %>
+    <%= link_to t('factory.admin.brands.index.title'), { controller: 'factory/admin/brands' }, class: active_helper(controllers: 'brands', active: 'is-active') %>
     <%= link_to t('factory.admin.factory_taxons.index.title'), { controller: 'factory/admin/factory_taxons' }, class: active_helper(controllers: ['factory_taxons'], active: 'is-active') -%>
   <% end %>
   <a class="menu-label" data-action="menu#toggle">
