--- a/app/views/factory/admin/parts/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/parts/_index/_index_tbody.html.erb
@@ -14,6 +14,6 @@
 <td>
   <%= link_to({ controller: 'part_providers', part_id: model.id }, class: 'button is-small is-rounded is-light') do %>
     <span>供应商管理</span>
-    <span class="has-text-green"><%= model.part_providers_count %></span>
+    <span class="has-text-success pl-1"><%= model.part_providers_count %></span>
   <% end %>
 </td>
