--- a/app/views/factory/admin/part_plans/_index/_index_thead.html.erb
+++ b/app/views/factory/admin/part_plans/_index/_index_thead.html.erb
@@ -1,5 +1,7 @@
-<th><%= Factory::PartPlan.human_attribute_name(:start_at) %></th>
-<th><%= Factory::PartPlan.human_attribute_name(:finish_at) %></th>
+<th>
+  <p><%= Factory::PartPlan.human_attribute_name(:start_at) %></p>
+  <p><%= Factory::PartPlan.human_attribute_name(:finish_at) %></p>
+</th>
 <th><%= Factory::PartPlan.human_attribute_name(:state) %></th>
 <th><%= Factory::PartPlan.human_attribute_name(:purchased_count) %></th>
 <th><%= Factory::PartPlan.human_attribute_name(:received_count) %></th>
