--- a/app/views/factory/admin/part_plans/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/part_plans/_index/_index_tbody.html.erb
@@ -1,5 +1,7 @@
-<td><time data-controller="time"><%= model.start_at.to_fs(:iso8601) %></time></td>
-<td><time data-controller="time"><%= model.finish_at.to_fs(:iso8601) %></time></td>
+<td>
+  <p><time data-controller="time"><%= model.start_at.to_fs(:iso8601) %></time></p>
+  <p><time data-controller="time"><%= model.finish_at.to_fs(:iso8601) %></time></p>
+</td>
 <td><%= model.state_i18n %></td>
 <td><%= model.purchased_count %></td>
 <td>
