--- a/app/views/factory/admin/provides/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/provides/_index/_index_tbody.html.erb
@@ -1,1 +1,6 @@
-<td><%= model.provider_id %></td>
+<td>
+  <div class="is-several">
+    <%= image_tag model.provider.logo, class: 'image is-24x24' if model.provider.logo.attached? %>
+    <span><%= model.provider.name %></span>
+  </div>
+</td>
