--- a/app/views/factory/panel/factory_taxons/_index/_index_tbody.html.erb
+++ b/app/views/factory/panel/factory_taxons/_index/_index_tbody.html.erb
@@ -5,7 +5,7 @@
   </div>
 </td>
 <td>
-  <%= link_to({ controller: 'providers', factory_taxon_id: model.id }, aria: { label: t('factory.panel.providers.index.title') }, class: 'button is-small is-rounded is-light') do %>
+  <%= link_to({ controller: 'factory_providers', factory_taxon_id: model.id }, aria: { label: t('factory.panel.providers.index.title') }, class: 'button is-small is-rounded is-light') do %>
     <i class="fa-light fa-industry"></i>
   <% end %>
 </td>
