--- a/app/views/factory/panel/factory_providers/_index/_breadcrumb.html.erb
+++ b/app/views/factory/panel/factory_providers/_index/_breadcrumb.html.erb
@@ -1,6 +1,7 @@
 <div class="breadcrumb has-succeeds-separator">
   <ul>
     <li><%= link_to t('factory.panel.factory_taxons.index.title'), { controller: 'factory_taxons' } %></li>
+    <li><span class="px-3"><%= @factory_taxon.name %></span></li>
     <li class="is-active"><%= t('.title') %></li>
   </ul>
 </div>
