--- a/app/views/factory/panel/product_brands/_show_table.html.erb
+++ b/app/views/factory/panel/product_brands/_show_table.html.erb
@@ -1,16 +1,12 @@
 <tr>
   <td class="has-text-right"><%= Factory::Brand.human_attribute_name(:name) %></td>
-  <td><%= @brand.name %></td>
+  <td><%= @product_brand.name %></td>
 </tr>
 <tr>
-  <td class="has-text-right"><%= Factory::Brand.human_attribute_name(:parts_count) %></td>
-  <td><%= @brand.parts_count %></td>
-</tr>
-<tr>
-  <td class="has-text-right"><%= Factory::Brand.human_attribute_name(:products_count) %></td>
-  <td><%= @brand.products_count %></td>
+  <td class="has-text-right"><%= Factory::Brand.human_attribute_name(:entities_count) %></td>
+  <td><%= @product_brand.entities_count %></td>
 </tr>
 <tr>
   <td class="has-text-right"><%= Factory::Brand.human_attribute_name(:organ_id) %></td>
-  <td><%= @brand.organ_id %></td>
+  <td><%= @product_brand.organ_id %></td>
 </tr>
