--- a/app/views/factory/admin/parts/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/parts/_index/_index_tbody.html.erb
@@ -1,8 +1,10 @@
 <td>
-  <p><%= model.name %></p>
+  <div class="is-several">
+    <%= image_tag model.logo, class: 'image is-32x32' if model.logo.attached? %>
+    <span><%= model.name %></span>
+  </div>
   <p class="has-text-grey"><%= model.qr_prefix %></p>
 </td>
-<td><%= image_tag model.logo, class: 'image is-32x32' if model.logo.attached? %></td>
 <td>
   <%= link_to t('factory.admin.part_plans.index.title'), { controller: 'part_plans', part_id: model.id }, class: 'button' %>
 </td>
