--- a/app/views/factory/admin/parts/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/parts/_index/_index_tbody.html.erb
@@ -5,14 +5,13 @@
   </div>
   <p class="has-text-grey"><%= model.qr_prefix %></p>
 </td>
-<td>
-  <%= link_to t('factory.admin.part_plans.index.title'), { controller: 'part_plans', part_id: model.id }, class: 'button' %>
-</td>
+<td><%= model.brand&.name %></td>
 <td class="has-text-right">
   <p><%= model.import_price.to_d.to_fs(:currency, unit: '￥') %></p>
   <p><%= model.profit_price.to_d.to_fs(:currency, unit: '￥') %></p>
   <p><%= model.price.to_d.to_fs(:currency, unit: '￥') %></p>
 </td>
+<td><%= link_to t('factory.admin.part_plans.index.title'), { controller: 'part_plans', part_id: model.id }, class: 'button' %></td>
 <td>
   <%= link_to({ controller: 'part_providers', part_id: model.id }, class: 'button is-small is-rounded is-light') do %>
     <span>供应商管理</span>
