--- a/app/views/factory/admin/parts/_index/_index_thead.html.erb
+++ b/app/views/factory/admin/parts/_index/_index_thead.html.erb
@@ -8,10 +8,11 @@
   <p><%= Factory::Part.human_attribute_name(:name) %></p>
   <p class="has-text-grey"><%= Factory::Part.human_attribute_name(:qr_prefix) %></p>
 </th>
-<th><%= Factory::Part.human_attribute_name(:part_plans) %></th>
+<th><%= Factory::Part.human_attribute_name(:brand_id) %></th>
 <th class="has-text-right">
   <p><%= Factory::Part.human_attribute_name(:import_price) %></p>
   <p><%= Factory::Part.human_attribute_name(:profit_price) %></p>
   <p><%= Factory::Part.human_attribute_name(:price) %></p>
 </th>
+<th><%= Factory::Part.human_attribute_name(:part_plans) %></th>
 <th></th>
