--- a/app/views/factory/admin/products/_index/_index_thead.html.erb
+++ b/app/views/factory/admin/products/_index/_index_thead.html.erb
@@ -4,9 +4,8 @@
     <i class="fa-light fa-cog"></i>
   <% end %>
 </th>
-<th><%= Factory::Product.human_attribute_name(:name) %></th>
 <th>
-  <%= Factory::Product.human_attribute_name(:logo) %>
+  <span><%= Factory::Product.human_attribute_name(:name) %></span>
   <%= link_to({ controller: 'com/panel/blob_defaults', action: 'add', record_class: 'Product', name: 'logo' }, data: { turbo_frame: 'modal' }, aria: { label: '默认图片' }) do %>
     <i class="fa-light fa-cog"></i>
   <% end %>
