--- a/app/views/factory/admin/products/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/products/_index/_index_tbody.html.erb
@@ -1,12 +1,11 @@
 <td>
-  <%= link_to model.name, { action: 'show', id: model.id }, text: true %>
-  <%= link_to({ controller: 'productions', product_id: model.id }, aria: { label: t('factory.admin.productions.index.title') }, class: 'button is-small is-rounded is-light') do %>
-    <i class="fa-light fa-clone"></i><span><%= model.productions_count %></span>
-  <% end %>
-</td>
-<td>
-  <%= image_tag model.logo.variant(resize_to_limit: [80, 80]), class: 'image is-64x64' if model.logo.attached? %>
-  <span class="tag"><%= model.covers_attachments.size %></span>
+  <div class="is-several">
+    <%= image_tag model.logo.variant(resize_to_limit: [80, 80]), class: 'image is-32x32' if model.logo.attached? %>
+    <%= link_to model.name, { action: 'show', id: model.id }, text: true %>
+    <%= link_to({ controller: 'productions', product_id: model.id }, aria: { label: t('factory.admin.productions.index.title') }, class: 'button is-small is-rounded is-light') do %>
+      <i class="fa-light fa-clone"></i><span><%= model.productions_count %></span>
+    <% end %>
+  </div>
 </td>
 <td><%= model.profit_margin_str %></td>
 <td>
