--- a/app/views/factory/admin/products/_index/_index_tr.html.erb
+++ b/app/views/factory/admin/products/_index/_index_tr.html.erb
@@ -2,9 +2,11 @@
   <%= yield %>
   <td>
     <div data-show-target="item" style="visibility: hidden">
+
       <%= link_to({ action: 'show', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-light fa-circle-info"></i>
-      <% end %>
+        <span class="pl-1"><%= model.covers_attachments.size %></span>
+    <% end %>
       <%= link_to({ action: 'edit', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.edit') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-light fa-pencil"></i>
       <% end %>
