--- a/app/views/factory/admin/products/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/products/_index/_index_tbody.html.erb
@@ -3,7 +3,8 @@
     <%= image_tag model.logo.variant(resize_to_limit: [80, 80]), class: 'image is-32x32' if model.logo.attached? %>
     <%= link_to model.name, { action: 'show', id: model.id }, text: true %>
     <%= link_to({ controller: 'productions', product_id: model.id }, aria: { label: t('factory.admin.productions.index.title') }, class: 'button is-small is-rounded is-light') do %>
-      <i class="fa-light fa-clone"></i><span><%= model.productions_count %></span>
+      <i class="fa-light fa-clone"></i>
+      <span class="pl-1"><%= model.productions_count %></span>
     <% end %>
   </div>
 </td>
