--- a/app/views/factory/admin/production_items/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/production_items/_index/_index_tbody.html.erb
@@ -1,5 +1,5 @@
 <td><%= model.id %></td>
-<td><%= model.qr_code %></td>
+<td class="has-text-mono"><%= model.qr_code %></td>
 <td>
   <%= image_tag model.qrcode_url, class: 'image is-32x32' %>
 </td>
