--- a/app/views/factory/admin/productions/_index/_index_tr.html.erb
+++ b/app/views/factory/admin/productions/_index/_index_tr.html.erb
@@ -22,7 +22,7 @@
       <% end %>
       <%= link_to({ controller: 'production_plans', production_id: model.id }, class: 'button is-small is-rounded is-info') do %>
         <i class="fa-light fa-list-timeline"></i>
-        <span><%= t('factory.admin.production_plans.index.title') %></span>
+        <span class="pl-1"><%= t('factory.admin.production_plans.index.title') %></span>
       <% end %>
     </span>
   </td>
