--- a/app/views/panel/_factory_nav.html.erb
+++ b/app/views/panel/_factory_nav.html.erb
@@ -1,6 +1,6 @@
 <div class="<%= active_helper(modules: 'factory/panel', active: 'menu ex-accordion is-active', item: 'menu ex-accordion') %>" data-controller="menu">
   <%= content_tag :div, class: 'menu-list' do %>
-    <%= link_to t('factory.panel.factory_taxons.index.title'), { controller: 'factory/panel/factory_taxons' }, class: active_helper(controllers: ['factory_taxons'], active: 'is-active') %>
+    <%= link_to t('factory.panel.factory_taxons.index.title'), { controller: 'factory/panel/factory_taxons' }, class: active_helper(controllers: ['factory_taxons', 'factory_providers'], active: 'is-active') %>
     <%= link_to t('factory.panel.unifiers.index.title'), { controller: 'factory/panel/unifiers' }, class: active_helper(controllers: ['unifiers'], active: 'is-active') %>
     <%= link_to t('factory.panel.product_brands.index.title'), { controller: 'factory/panel/product_brands' }, class: active_helper(controllers: ['product_brands'], active: 'is-active') %>
     <%= link_to t('factory.panel.part_brands.index.title'), { controller: 'factory/panel/part_brands' }, class: active_helper(controllers: ['part_brands'], active: 'is-active') %>
