--- a/app/views/factory/admin/part_items/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/part_items/_index/_index_tbody.html.erb
@@ -1,4 +1,4 @@
-<td><%= model.qr_code %></td>
+<td class="has-text-mono"><%= model.qr_code %></td>
 <td>
   <%= image_tag model.qrcode_url, class: 'image is-32x32' %>
 </td>
