--- a/app/views/factory/admin/productions/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/productions/_index/_index_tbody.html.erb
@@ -3,6 +3,7 @@
     <%= image_tag model.logo, class: 'image is-24x24' if model.logo.attached? %>
     <span><%= model.name %></span>
   </div>
+  <p class="has-text-grey"><%= model.qr_code %></p>
 </td>
 <td class="has-inner-table">
   <table class="table is-fullwidth is-borderless">
@@ -50,7 +51,6 @@
   <% end %>
 </td>
 <td><%= model.state_i18n %></td>
-<td><%= model.qr_code %></td>
 <td>
   <%= form_with theme: nil, model: model, url: { action: 'update', id: model.id }, data: { controller: 'input' } do |f| %>
     <%= f.check_box :enabled, data: { input_target: 'checkbox' }, id: nil, class: 'switch is-rounded' %>
