sep to deirrent che

--- a/app/views/factory/admin/productions/_index/_index_thead.html.erb
+++ b/app/views/factory/admin/productions/_index/_index_thead.html.erb
@@ -1,6 +1,6 @@
 <th colspan="2">
   <p><%= Factory::Production.human_attribute_name(:name) %></p>
-  <p><%= Factory::Production.human_attribute_name(:qr_code) %></p>
+  <p class="has-text-grey"><%= Factory::Production.human_attribute_name(:qr_code) %></p>
 </th>
 <th class="has-text-right">
   <p><%= Factory::Production.human_attribute_name(:base_price) %></p>
