--- a/app/views/factory/admin/productions/_form.html.erb
+++ b/app/views/factory/admin/productions/_form.html.erb
@@ -1,4 +1,5 @@
-<%= render 'error_messages', target: @production %>
+<%= render 'error_messages', target: f.object %>
+<%= f.text_field :name %>
 <% @product.product_part_taxons.each do |product_part_taxon| %>
   <%= f.collection_check_boxes :part_ids, product_part_taxon.parts, :id, :name, { label: product_part_taxon.name, wrap: { select: 'field-body control' } }, { multiple: true } %>
 <% end %>
