--- a/app/views/factory/admin/productions/_vip_form.html.erb
+++ b/app/views/factory/admin/productions/_vip_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_with model: @production, url: { action: 'update_vip' } do |f| %>
-  <%= render 'error_messages', target: @production %>
+  <%= render 'error_messages', target: f.object %>
   <% @card_templates.each do |card_template| %>
     <%= f.fields :vip_price do |ef| %>
       <%= ef.hidden_field :code, value: card_template.code, index: card_template.id %>
