unify product brand logic

--- a/app/views/factory/admin/products/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/products/_index/_index_tbody.html.erb
@@ -8,6 +8,9 @@
     <% end %>
   </div>
 </td>
+<td>
+  <p><%= model.brand&.name %></p>
+</td>
 <td><%= model.profit_margin_str %></td>
 <td>
   <p><%= model.min_price.to_money.format(html_wrap: true).html_safe %></p>
