--- a/app/views/factory/panel/brands/_index/_index_tbody.html.erb
+++ b/app/views/factory/panel/brands/_index/_index_tbody.html.erb
@@ -4,7 +4,7 @@
     <span><%= model.name %></span>
   </div>
 </td>
-<td><%= model.entities_count %></td>
+<td><%= model.products_count %></td>
 <td>
 <% if model.organ %>
   <div class="is-several">
