--- a/app/views/factory/panel/brands/_show_table.html.erb
+++ b/app/views/factory/panel/brands/_show_table.html.erb
@@ -1,12 +1,12 @@
 <tr>
   <td class="has-text-right"><%= Factory::Brand.human_attribute_name(:name) %></td>
-  <td><%= @product_brand.name %></td>
+  <td><%= @brand.name %></td>
 </tr>
 <tr>
   <td class="has-text-right"><%= Factory::Brand.human_attribute_name(:entities_count) %></td>
-  <td><%= @product_brand.entities_count %></td>
+  <td><%= @brand.entities_count %></td>
 </tr>
 <tr>
   <td class="has-text-right"><%= Factory::Brand.human_attribute_name(:organ_id) %></td>
-  <td><%= @product_brand.organ_id %></td>
+  <td><%= @brand.organ_id %></td>
 </tr>
