--- a/app/views/factory/panel/serials/_index/_breadcrumb.html.erb
+++ b/app/views/factory/panel/serials/_index/_breadcrumb.html.erb
@@ -1,6 +1,6 @@
 <div class="breadcrumb has-succeeds-separator">
   <ul>
-    <li><%= link_to t('factory.panel.product_brands.index.title'), { controller: 'product_brands' } %></li>
+    <li><%= link_to t('factory.panel.brands.index.title'), { controller: 'brands' } %></li>
     <li><span class="px-3"><%= @brand.name %></span></li>
     <li class="is-active"><%= t('.title') %></li>
   </ul>
