--- a/app/views/panel/_factory_nav.html.erb
+++ b/app/views/panel/_factory_nav.html.erb
@@ -2,8 +2,7 @@
   <%= content_tag :div, class: 'menu-list' do %>
     <%= link_to t('factory.panel.factory_taxons.index.title'), { controller: 'factory/panel/factory_taxons' }, class: active_helper(controllers: ['factory_taxons', 'factory_providers'], active: 'is-active') %>
     <%= link_to t('factory.panel.unifiers.index.title'), { controller: 'factory/panel/unifiers' }, class: active_helper(controllers: ['unifiers'], active: 'is-active') %>
-    <%= link_to t('factory.panel.product_brands.index.title'), { controller: 'factory/panel/product_brands' }, class: active_helper(controllers: ['product_brands', 'serials'], active: 'is-active') %>
-    <%= link_to t('factory.panel.part_brands.index.title'), { controller: 'factory/panel/part_brands' }, class: active_helper(controllers: ['part_brands'], active: 'is-active') %>
+    <%= link_to t('factory.panel.brands.index.title'), { controller: 'factory/panel/brands' }, class: active_helper(controllers: ['brands', 'serials'], active: 'is-active') %>
     <%= link_to t('factory.panel.scenes.index.title'), { controller: 'factory/panel/scenes' }, class: active_helper(controllers: ['scenes'], active: 'is-active') -%>
   <% end %>
   <a class="menu-label" data-action="menu#toggle">
