--- a/app/views/factory/panel/brands/_show_table.html.erb
+++ b/app/views/factory/panel/brands/_show_table.html.erb
@@ -3,8 +3,8 @@
   <td><%= @brand.name %></td>
 </tr>
 <tr>
-  <td class="has-text-right"><%= Factory::Brand.human_attribute_name(:entities_count) %></td>
-  <td><%= @brand.entities_count %></td>
+  <td class="has-text-right"><%= Factory::Brand.human_attribute_name(:products_count) %></td>
+  <td><%= @brand.products_count %></td>
 </tr>
 <tr>
   <td class="has-text-right"><%= Factory::Brand.human_attribute_name(:organ_id) %></td>
