support select production id

--- a/app/views/factory/admin/fits/_form.html.erb
+++ b/app/views/factory/admin/fits/_form.html.erb
@@ -1,3 +1,4 @@
+<%= f.collection_select :production_id, @productions, :id, :name, include_blank: true %>
 <%= f.text_field :part_brand_id %>
 <%= f.text_field :part_serial_id %>
 <%= f.text_field :part_product_id %>
