--- a/app/views/factory/admin/fits/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/fits/_index/_index_tbody.html.erb
@@ -1,6 +1,6 @@
 <td>
-  <p><%= model.part_brand_id %></p>
-  <p><%= model.part_serial_id %></p>
+  <p><%= model.part_brand.name %></p>
+  <p><%= model.part_serial&.name %></p>
 </td>
 <td><%= model.part_product_id %></td>
 <td><%= model.part_production_id %></td>
