--- a/app/views/factory/admin/fits/_form.html.erb
+++ b/app/views/factory/admin/fits/_form.html.erb
@@ -1,5 +1,5 @@
 <%= f.collection_select :production_id, @productions, :id, :name, include_blank: true %>
-<%= f.text_field :part_brand_id %>
+<%= f.collection_select :part_brand_id, @brands, :id, :name %>
 <%= f.text_field :part_serial_id %>
 <%= f.text_field :part_product_id %>
 <%= f.text_field :part_production_id %>
