--- a/app/views/factory/admin/product_taxons/_base/_product_tbody.html.erb
+++ b/app/views/factory/admin/product_taxons/_base/_product_tbody.html.erb
@@ -24,7 +24,7 @@
   <% end %>
 </td>
 <td>
-  <%= link_to({ controller: 'products', action: 'part', id: model.id }, aria: { label: t('factory.admin.products.part.title') }, class: 'button is-small is-rounded is-light') do %>
+  <%# link_to({ controller: 'productions', action: 'part', id: model.id }, aria: { label: t('factory.admin.productions.part.title') }, class: 'button is-small is-rounded is-light') do %>
     <i class="fa-light fa-cube"></i>
-  <% end %>
+  <%# end %>
 </td>
