--- a/app/views/factory/admin/product_taxons/_base/_product_tr.html.erb
+++ b/app/views/factory/admin/product_taxons/_base/_product_tr.html.erb
@@ -1,15 +1,17 @@
 <tr id="tr_<%= model.id %>" data-controller="tree-remote show" data-tree-remote-target="item" data-action="mouseenter->show#show mouseleave->show#hide">
   <%= yield %>
   <td>
-    <turbo-frame>
-      <%= link_to t('factory.admin.product_plans.index.title'), { controller: 'product_plans', product_id: model.id }, data: { turbo_frame: '_top' }, class: 'button is-small is-success' %>
+    <div>
+      <%= link_to({ controller: 'production_plans', product_id: model.id }, aria: { label: t('factory.admin.production_plans.index.title') }, class: 'button is-small is-success') do %>
+        <i class="fa-light fa-flash"></i>
+      <% end %>
       <%= link_to({ controller: 'productions', product_id: model.id }, aria: { label: t('factory.admin.productions.index.title') }, data: { turbo_frame: '_top' }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-light fa-clone"></i>
       <% end %>
       <%= link_to({ controller: 'products', action: 'show', id: model.id }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-light fa-circle-info"></i>
       <% end %>
-    </turbo-frame>
+    </div>
   </td>
 </tr>
 
