--- a/app/views/factory/admin/products/index.html.erb
+++ b/app/views/factory/admin/products/index.html.erb
@@ -4,6 +4,14 @@
     <td rowspan="<%= products.size + 1 %>">
     <% if taxon %>
       <p><%= taxon.name %></p>
+      <p>
+      <% if taxon.factory_taxon %>
+        <span class="has-text-grey"><%= taxon.factory_taxon.name %></span>
+        <%= link_to({ controller: 'product_taxons', action: 'import', id: taxon.id }, aria: { label: t('factory.admin.product_taxons.import.title') }) do %>
+          <i class="fa-light fa-sign-in-alt"></i>
+        <% end %>
+      <% end %>
+      </p>
       <p class="has-text-grey"><%= taxon.scene&.title %></p>
     <% end %>
     </td>
