--- a/app/views/factory/admin/product_taxons/_base/_product_tbody.html.erb
+++ b/app/views/factory/admin/product_taxons/_base/_product_tbody.html.erb
@@ -5,15 +5,15 @@
   <%= image_tag model.logo.variant(resize_to_limit: [24, 24]), class: 'image is-24x24' if model.logo.attached? %>
   <%= model.name %>
 </td>
-<td><%= model.qr_prefix %></td>
+<td><%= model.product.qr_prefix %></td>
 <td>
   <table class="table is-borderless">
-    <% model.parts.each do |part| %>
-      <tr>
-        <td><span class="tag"><%= link_to part.name, { controller: 'parts', action: 'show', id: part.id } %></span></td>
-        <td><%= part.price %></td>
-      </tr>
-    <% end %>
+  <% model.parts.each do |part| %>
+    <tr>
+      <td><span class="tag"><%= link_to part.name, { controller: 'products', action: 'show', id: part.id } %></span></td>
+      <td><%= part.price %></td>
+    </tr>
+  <% end %>
   </table>
 </td>
 <td>
