--- a/app/views/factory/admin/product_taxons/_base/_product_tr.html.erb
+++ b/app/views/factory/admin/product_taxons/_base/_product_tr.html.erb
@@ -2,7 +2,7 @@
   <%= yield %>
   <td>
     <div>
-      <%= link_to({ controller: 'production_plans', product_id: model.id }, aria: { label: t('factory.admin.production_plans.index.title') }, class: 'button is-small is-success') do %>
+      <%= link_to({ controller: 'production_plans', product_id: model.product_id, production_id: model.id }, aria: { label: t('factory.admin.production_plans.index.title') }, class: 'button is-small is-success') do %>
         <i class="fa-light fa-flash"></i>
       <% end %>
       <%= link_to({ controller: 'productions', product_id: model.id }, aria: { label: t('factory.admin.productions.index.title') }, data: { turbo_frame: '_top' }, class: 'button is-small is-rounded is-light') do %>
