--- a/app/views/factory/admin/product_taxons/_base/_product_tbody.html.erb
+++ b/app/views/factory/admin/product_taxons/_base/_product_tbody.html.erb
@@ -5,7 +5,7 @@
   <%= image_tag model.logo.variant(resize_to_limit: [24, 24]), class: 'image is-24x24' if model.logo.attached? %>
   <%= model.name %>
 </td>
-<td><%= model.product.qr_prefix %></td>
+<td><%= model.qr_prefix %></td>
 <td>
   <table class="table is-borderless">
   <% model.parts.each do |part| %>
