--- a/app/views/factory/admin/product_taxons/import.html.erb
+++ b/app/views/factory/admin/product_taxons/import.html.erb
@@ -1,5 +1,5 @@
-<%= render layout: 'product_table' do %>
-  <%= render partial: 'product_tbody', layout: 'product_tr', collection: @products, as: :model %>
+<%= render layout: 'index_table' do %>
+  <%= render partial: 'index_tbody', layout: 'index_tr', collection: @products, as: :model %>
 <% end %>
 
 <%= paginate @products %>
